# w11-nasa-theme

./: .editorconfig  .gitignore  CONTRIBUTORS.md  CREDITS.md  NASA-COMPLIANCE.md  README.md  install.ps1  pyproject.toml
.cursor/: AGENTS.md
.cursor/rules/: powershell-standards.mdc  project-conventions.mdc  python-standards.mdc
assets/cursors/: README.md
assets/cursors/w11-tail-cursor-concept-free/: Agreement.txt
assets/cursors/w11-tail-cursor-concept-free/cursor/dark/: Install.inf
assets/cursors/w11-tail-cursor-concept-free/cursor/light/: Install.inf
assets/sounds/: README.md
assets/wallpapers/: README.md
scripts/: build-normalize-exe.ps1  install.ps1  normalize-wallpapers.py  requirements.txt
themes/: NASA_Tema_Claro.theme  NASA_Tema_Oscuro.theme
