[project]
name = "w11-nasa-theme"
version = "0.1.0"
description = "Tema visual NASA para Windows 11"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Pillow>=10.0.0"]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]
build = ["pyinstaller>=6.0.0"]

[tool.ruff]
target-version = "py310"
line-length = 180
exclude = ["build", "dist", ".git", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
